# cv-pic

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/cv/pic/wy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/cv/pic/wy/: MainActivity.kt
app/src/main/java/com/cv/pic/wy/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/cv/pic/wy/: ExampleUnitTest.kt
compile/: ffmpeg.sh  ffmpeg_win.sh  x264.sh
gradle/wrapper/: gradle-wrapper.properties
native/: build.gradle
native/libs/arm64-v8a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
native/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
native/src/androidTest/java/com/lib/nativ/: ExampleInstrumentedTest.kt
native/src/main/cpp/: CMakeLists.txt  nativ.cpp
native/src/main/java/com/lib/nativ/: NativeLib.kt
native/src/test/java/com/lib/nativ/: ExampleUnitTest.kt
opencv/: build.gradle
